CS_PROD_20150209_01/Metadata/unpackaged/objects/Broadcast_Item__c.object
<CustomObject>
    <description>This object will used to house Broadcast Items that come in and created through VisualFlow Pages.</description>
    <fields>
        <fullName>Account_Level_Discount__c</fullName>
        <formula>Opportunity__r.Account_Level_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Level Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Fee__c</fullName>
        <label>Acquisition Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_DVD_Clip__c</fullName>
        <formula>IF( (ISPICKVAL( Inventory_Item__c, &quot;DVD - Video&quot;) || ISPICKVAL(Inventory_Item__c, &quot;DVD - Data&quot;)) 
&amp;&amp; NOT(ISPICKVAL(Product_Detail__c, &quot;Radio&quot;))
&amp;&amp; NOT(ISPICKVAL(Product_Detail__c, &quot;Blu-Ray (1280x720)&quot;)) , 
Overage_Time_TRT__c * 25, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: DVD Clip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_DigiCombo__c</fullName>
        <formula>IF((ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Video&quot;) || ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Data&quot;)) 
&amp;&amp; NOT(ISPICKVAL(Product_Detail__c , &quot;HD (1280x720)&quot;)) 
&amp;&amp; NOT(ISPICKVAL(Product_Detail__c , &quot;High Res (720x480)&quot;)), 
  Overage_Time_TRT__c * 35,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: DigiCombo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_Digital_Clip__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Digital Clip&quot;) &amp;&amp; NOT(ISPICKVAL(  Product_Detail__c , &quot;High Res (720x480)&quot;)) &amp;&amp; NOT(ISPICKVAL(  Product_Detail__c , &quot;HD (1280x720)&quot;))  &amp;&amp; NOT(ISPICKVAL(Product_Detail__c, &quot;Radio&quot;)) , 
Overage_Time_TRT__c * 30, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: Digital Clip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_HD_Digital_Blu_Ray_Combo__c</fullName>
        <formula>IF((ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Video&quot;) || ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Data&quot;) || ISPICKVAL( Inventory_Item__c, &quot;DVD - Video&quot;) ) 
&amp;&amp; ( (ISPICKVAL(  Product_Detail__c , &quot;Blu-Ray (1280x720)&quot;))
|| (ISPICKVAL(  Product_Detail__c , &quot;HD (1280x720)&quot;)) ) , 
Overage_Time_TRT__c * 50, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: HD Digital Blu-Ray Combo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_HD_Digital_Clip__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Digital Clip&quot;)   &amp;&amp;  (ISPICKVAL(  Product_Detail__c , &quot;HD (1280x720)&quot;)) , 
Overage_Time_TRT__c * 50, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: HD Digital Clip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_ProCombo_Fee__c</fullName>
        <formula>IF((ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Video&quot;) || ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Data&quot;)) &amp;&amp; (ISPICKVAL( Product_Detail__c , &quot;High Res (720x480)&quot;)) , 
Overage_Time_TRT__c * 40, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: ProCombo Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_Pro_Clip_Fee__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Digital Clip&quot;) &amp;&amp; (ISPICKVAL( Product_Detail__c , &quot;High Res (720x480)&quot;)) , 
Overage_Time_TRT__c * 35, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: Pro Clip Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_Radio_Clip_Fee__c</fullName>
        <formula>IF(ISPICKVAL(  Product_Detail__c , &quot;Radio&quot;) &amp;&amp; NOT( ISPICKVAL(Inventory_Item__c, &quot;Report - Ad-Hoc&quot;) ) , 
Overage_Time_TRT__c * 20, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: Radio Clip Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_min_Video_Tape__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Video Tape&quot;) , 
Overage_Time_TRT__c * 20, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l 10 min: Video Tape</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_10_minutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Add&apos;l 10 minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_Digital_Views_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;Add’l Digital Views&quot;), 
IF(ISPICKVAL( Product_Detail__c , &quot;Add&apos;l Digital Views: 1000/28&quot;), 
500, 
IF(ISPICKVAL(Product_Detail__c , &quot;Add&apos;l Digital Views: 50/28&quot;), 
100, 
IF(ISPICKVAL(Product_Detail__c, &quot;Add&apos;l Digital Views: 500/28&quot;), 
300, 
0 
) 
) 
) 
,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add&apos;l Digital Views Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_l_Page_Transcript_Translated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add&apos;l Page: Transcript-Translated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_l_Page_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add&apos;l Page: Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_l_Page_Visual_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add&apos;l Page: Visual Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_Hours_Fee__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;After Hours Fee&quot;), 
250
,0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>After Hours Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Date_Time_Time_Zone__c</fullName>
        <formula>TEXT(MONTH(Air_Date__c)) + &quot;/&quot; + 
TEXT(DAY(Air_Date__c)) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Air_Date__c)),2) &amp; &quot; &quot; &amp; Air_Time__c &amp; &quot; &quot; &amp; TEXT(Time_Zone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Date/Time/Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Date_Time__c</fullName>
        <formula>TEXT(MONTH(Air_Date__c)) + &quot;/&quot; + 
TEXT(DAY(Air_Date__c)) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Air_Date__c)),2)    &amp; &quot; &quot; &amp; Air_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Date__c</fullName>
        <label>Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Air_Time__c</fullName>
        <label>Air Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arbitron_Custom_Pricing__c</fullName>
        <inlineHelpText>Used with the Report Inventory Item</inlineHelpText>
        <label>Arbitron Custom Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Archive_Fee_2_5_Years__c</fullName>
        <label>Archive Fee: 2 - 5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Archive_Fee_5_Years__c</fullName>
        <label>Archive Fee: +5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Archive_Fee__c</fullName>
        <formula>IF(  NOT(ISPICKVAL(Product_Detail__c, &quot;HD (1280x720)&quot;)) &amp;&amp; NOT(ISPICKVAL(Product_Detail__c, &quot;Blu-Ray (1280x720)&quot;)),


IF(  Archive_Months__c &lt; 1, 
0,
IF(  Archive_Months__c &lt;= 6, 
75,
     IF( Archive_Months__c &lt;= 12,
     125,
            IF( Archive_Months__c &lt;= 24,
            250,
                 IF(Archive_Months__c &lt;= 60,
                  350,
                       IF(Archive_Months__c &gt; 60,500,0)
                  ) 
            )
     )
)

),0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Archive Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Archive_Months__c</fullName>
        <formula>(DATEVALUE(CreatedDate) - Air_Date__c ) / 30 




/* Old Code Below */


/* ((YEAR(Opportunity__r.Due_Date__c )  - YEAR(Air_Date__c)) * 12)
+
(MONTH(Opportunity__r.Due_Date__c )  - MONTH(Air_Date__c))

*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Due Date - Air Date</inlineHelpText>
        <label>Archive Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribute_Costs__c</fullName>
        <formula>IF(INCLUDES(Attributes__c, &quot;Buzz Graph&quot;), 99, 0) + 
IF(INCLUDES(Attributes__c, &quot;Slate(s)&quot;), 15, 0) +
IF(INCLUDES(Attributes__c, &quot;Teaser&quot;), 25, 0) +
IF(INCLUDES(Attributes__c, &quot;Nielsen (TV)&quot;),   Nielsen_Custom_Pricing__c  , 0) +
IF(INCLUDES(Attributes__c, &quot;Arbitron (Radio)&quot;),  Arbitron_Custom_Pricing__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <label>Attributes</label>
        <picklist>
            <controllingField>Inventory_Item__c</controllingField>
            <picklistValues>
                <fullName>Slate(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nielsen (TV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arbitron (Radio)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BI_Translation_Fee__c</fullName>
        <label>Translation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Remaining__c</fullName>
        <formula>Clip_Package__r.Remaining_Package_Clips__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP # Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_of_Clip__c</fullName>
        <formula>Clip_Package__r.Number_of_Clips__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP # of Clip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_under_50__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CP under 50%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cable_National_Markets__c</fullName>
        <description>Added by LM on 3/5/2013; From NetSuite</description>
        <label>Cable/National Markets</label>
        <picklist>
            <picklistValues>
                <fullName>CA: Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD: Dating shows *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT: Day Time *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E1: Client Supplied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E2: CISION Produced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS: Game Show *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD: Judicial Drama *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM: News Magazine *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS: National Syndicated *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT: National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT: Prime Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SN: Sports National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SZ: Sirius Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA: Talk Shows *</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cable_National_Stations__c</fullName>
        <description>Added by LM on 3/5/2013; From NetSuite</description>
        <label>Cable/National Stations</label>
        <picklist>
            <controllingField>Cable_National_Markets__c</controllingField>
            <picklistValues>
                <fullName>A &amp; E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABCN (ABC News Now)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Hollywood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Hollywood Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Al Jazeera - America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Al Jazeera - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALTS (Altitude Sports)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC (American Movie Classics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APL (Animal Planet)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXTC (Azteca)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bacons|multivision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBCA (BBC America)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBCW (BBC World)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIO (Biography)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAVO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALC (Cal Channel CSPN Calif)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casos de Familia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBN Newswatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCSN (Comcast Sports Net)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENT (Centric TV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMT (Country Music Television)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNBW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Canadian_International_Markets__c</fullName>
        <description>Added by LM on 2/28/2013; From NetSuite</description>
        <label>Canadian/International Markets</label>
        <picklist>
            <picklistValues>
                <fullName>OF: Calgary-Lethbridge, AB [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OG: Saguenay, QC [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH: Edmonton, AB [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OI: Medicine Hat, AB [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OJ: Pembroke-Petawawa, ON [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OL: The Soo, ON [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ON: Lloydminster, AB [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OO: Dawson Creek, BC [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OP: Delowna-Kamploops, BC [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OQ: Calgary, Lethbridge, AB [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS: Saguenay, QC [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT: Ottawa-Hull-Gatineau, ON [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OU: Edmonton. AB [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OV: Medicine Hat. AB [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OW: Pembroke-Petawawa, ON [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OX: Prince George, BC [ZY]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OY: The Soo, Ontario [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OZ: Lloydminster, AB [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD: Dawson Creek. BC [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PF: Delowna-Kamploops, BC [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PJ: Ottawa-Hull-Gatineau. ON [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PK: Prince George. BC [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM: Quebec City. QC [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PQ: St. John-Fredericton-Moncton. NB [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PU: Halifax-Dartmouth. NS [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PW: Sydney-Glace Bay. NS [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PY: Barrie-Orillia. BC [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PZ: Red Deer. AB [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA: Rimouski-Matane-Gaspe-Perce. QC [ZZ]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QB: Quebec City. QC [ZY]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Canadian_International_Stations__c</fullName>
        <description>Added by LM on 2/28/2013; From NetSuite</description>
        <label>Canadian/International Stations</label>
        <picklist>
            <controllingField>Canadian_International_Markets__c</controllingField>
            <picklistValues>
                <fullName>BNN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBC (Canadian Broadcasting Company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITY TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTV (CTV Newsnet)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLBL (Global TV Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRVO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBKF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBKT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBLF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBLT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBOF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Canadian_Market_Fee__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Canadian_International_Markets__c, &quot;&quot;)),
   IF(NOT(ISPICKVAL(Canadian_International_Markets__c, &quot;IM: International [IM]&quot;)),
     75,
     0
    )

,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outside Market Fee: Canada</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Clip_Package_Selected__c</fullName>
        <formula>IF( OR( And ( ISPICKVAL( Inventory_Item__c , &quot;DVD - Video&quot;) , ISPICKVAL( Product_Detail__c , &quot;Standard (720x480)&quot;) ), 
And ( ISPICKVAL( Inventory_Item__c , &quot;DVD - Data&quot;) , OR( ISPICKVAL( Product_Detail__c , &quot;Low Res (320x240)&quot;), ISPICKVAL( Product_Detail__c , &quot;High Res (720x480)&quot;) ) ) 
) , &quot;DVD Clip&quot;, 

IF(AND(ISPICKVAL(Inventory_Item__c ,&quot;Digital Clip&quot;), ISPICKVAL( Product_Detail__c, &quot;Low Res (320x240)&quot;) ), &quot;Digital Low Res&quot;, 

IF(AND(ISPICKVAL( Inventory_Item__c, &quot;Digital Clip&quot;),  ISPICKVAL( Product_Detail__c, &quot;High Res (720x480)&quot;) ), &quot;Digital High Res&quot;,

IF(AND(OR(ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Video&quot;), ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Data&quot;) ), ISPICKVAL( Product_Detail__c , &quot;Low Res (320x240)&quot;) ), &quot;DigiCombo Low Res&quot;,

IF(AND(OR(ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Video&quot;), ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Data&quot;) ), ISPICKVAL( Product_Detail__c , &quot;High Res (720x480)&quot;)), &quot;DigiCombo High Res&quot;,

IF(AND(OR(ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Video&quot;), ISPICKVAL( Inventory_Item__c, &quot;DigiCombo - Data&quot;) ), ISPICKVAL( Product_Detail__c , &quot;HD (1280x720)&quot;)), &quot;HD&quot;,

IF(ISPICKVAL( Inventory_Item__c, &quot;Transcript&quot;), &quot;Transcript&quot;,

IF(AND(OR(ISPICKVAL( Inventory_Item__c, &quot;DVD - Data&quot;), ISPICKVAL( Inventory_Item__c, &quot;Digital Clip&quot;)), ISPICKVAL( Product_Detail__c , &quot;Radio&quot;) ), &quot;Radio Clip&quot;,

IF(OR(ISPICKVAL( Inventory_Item__c, &quot;Download&quot;), ISPICKVAL( Inventory_Item__c, &quot;Sync&quot;) ), &quot;Self Service&quot;,

IF( OR( And ( ISPICKVAL( Inventory_Item__c , &quot;Digital Clip&quot;) , ISPICKVAL( Product_Detail__c , &quot;HD (1280x720)&quot;) ), And ( ISPICKVAL( Inventory_Item__c , &quot;DigiCombo - Data&quot;) , ISPICKVAL( Product_Detail__c , &quot;HD (1280x720)&quot;) ), 
And ( ISPICKVAL( Inventory_Item__c , &quot;DigiCombo - Video&quot;) , ISPICKVAL( Product_Detail__c , &quot;HD (1280x720)&quot;) ), And ( ISPICKVAL( Inventory_Item__c , &quot;DVD - Video&quot;) , ISPICKVAL( Product_Detail__c , &quot;Blu-Ray (1280x720)&quot;) ) ) , &quot;HD&quot;

, &quot;The selected Inventory Item and Product Detail has no corresponding Clip Package&quot;) ) ) ) ) ) ) ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clip Package Selected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clip_Package__c</fullName>
        <label>Clip Package</label>
        <referenceTo>Prepaid_Clip_Package__c</referenceTo>
        <relationshipLabel>Broadcast Items</relationshipLabel>
        <relationshipName>Broadcast_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_Digital_Item__c</fullName>
        <label>Cost: Digital Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creative_Services_Fee__c</fullName>
        <formula>195 *  Creative_Services_Hours_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creative Services Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creative_Services_Hours_Booked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Creative Services Hours Booked</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNA_Fee__c</fullName>
        <label>DNA Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNR_Cause__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>DNR Cause</label>
        <picklist>
            <picklistValues>
                <fullName>DVR Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Change Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Outage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questionable Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DNR_Device__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>DNR Device</label>
        <picklist>
            <picklistValues>
                <fullName>Critical Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iQ Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DNR_Location__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>DNR Location</label>
        <picklist>
            <picklistValues>
                <fullName>Production New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iQ Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DNR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>DNR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DVD_Data_Detail_Costs__c</fullName>
        <formula>IF(ISPICKVAL( Inventory_Item__c, &quot;DVD - Data&quot;), 
     IF(ISPICKVAL( Product_Detail__c , &quot;Low Res (320x240)&quot;),
     220,
          IF(ISPICKVAL(Product_Detail__c , &quot;High Res (720x480)&quot;),
          220,
               IF(ISPICKVAL(Product_Detail__c, &quot;Radio&quot;),
                125,
                 0
                   )
           )
     )
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DVD - Data Detail Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>